<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizReadyWholeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuizReadyFragment">

    <com.sanojpunchihewa.glowbutton.GlowButton
        android:id="@+id/startBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:buttonColor="@color/colorPrimary"
        app:cornerRadius="50dp"
        app:glowColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyCardView"
        app:layout_constraintWidth_percent="0.4"
        app:pressedGlowSize="25dp"
        app:unpressedGlowSize="20dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bodyCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"

        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bodyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problemSizeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/quiz_problem_size_description"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/problemSpinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/problemSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/problemSizeTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/problemSizeTextView"
                app:layout_constraintTop_toTopOf="@+id/problemSizeTextView" />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/quiz_category"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/categorySpinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/problemSizeTextView" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/categoryTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/categoryTextView"
                app:layout_constraintTop_toTopOf="@+id/categoryTextView" />

            <TextView
                android:id="@+id/yearSelectTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/setting_year"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />

            <org.apmem.tools.layouts.FlowLayout
                android:id="@+id/checkBoxFlowLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yearSelectTextView" />

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="40dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/quiz_description"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/centerAdView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxFlowLayout" />

            <com.kakao.adfit.ads.ba.BannerAdView
                android:id="@+id/centerAdView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/infoTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>